[bugfix] refactor