@@ -72,20 +72,23 @@ public class NotificationBatchService {
     @Async("notificationTaskExecutor")
     @Transactional
     public void addPostLikeToQueue(Long postId, Long actorUserId) {
-        log.debug("Adding post like to queue asynchronously: postId={}, actorUserId={}", postId, actorUserId);
-        
-        Posting post = postRepository.findById(postId).orElse(null);
-        if (post == null || post.getUserId().equals(actorUserId)) {
+        log.debug("Adding post like to queue asynchronously: postId={}, actorUserId={}", postId,
+                actorUserId);
+
+        Posting post = postRepository.findById(postId)
+                .orElse(null);
+        if (post == null || post.getUserId()
+                .equals(actorUserId)) {
             return; // 자신의 포스트에는 알림 안 보냄
         }
 
-        User actor = userRepository.findById(actorUserId).orElse(null);
+        User actor = userRepository.findById(actorUserId)
+                .orElse(null);
         if (actor == null) {
             return;
         }
 
-        addLikeToQueue(post.getUserId(), actorUserId, actor.getNickname(), 
-                      ItemType.POST, postId, NotificationType.LIKE);
+        addLikeToQueue(post.getUserId(), actorUserId, actor.getNickname(), ItemType.POST, postId);
     }
 
     /**
@@ -94,67 +97,79 @@ public class NotificationBatchService {
     @Async("notificationTaskExecutor")
     @Transactional
     public void addCommentLikeToQueue(Long commentId, Long actorUserId) {
-        log.debug("Adding comment like to queue asynchronously: commentId={}, actorUserId={}", commentId, actorUserId);
-        
-        Comment comment = commentRepository.findById(commentId).orElse(null);
-        if (comment == null || comment.getUserId().equals(actorUserId)) {
+        log.debug("Adding comment like to queue asynchronously: commentId={}, actorUserId={}",
+                commentId, actorUserId);
+
+        Comment comment = commentRepository.findById(commentId)
+                .orElse(null);
+        if (comment == null || comment.getUserId()
+                .equals(actorUserId)) {
             return; // 자신의 댓글에는 알림 안 보냄
         }
 
-        User actor = userRepository.findById(actorUserId).orElse(null);
+        User actor = userRepository.findById(actorUserId)
+                .orElse(null);
         if (actor == null) {
             return;
         }
 
-        addLikeToQueue(comment.getUserId(), actorUserId, actor.getNickname(), 
-                      ItemType.COMMENT, commentId, NotificationType.LIKE);
+        addLikeToQueue(comment.getUserId(), actorUserId, actor.getNickname(), ItemType.COMMENT,
+                commentId);
     }
 
     /**
      * 좋아요 알림을 배치 큐에 추가하는 공통 메서드
      */
     private void addLikeToQueue(Long recipientUserId, Long actorUserId, String actorUserName,
-                               ItemType itemType, Long itemId, NotificationType notificationType) {
-        
-        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, 
-                                       recipientUserId, 
-                                       itemType.name().toLowerCase(), 
-                                       itemId);
+            ItemType itemType, Long itemId) {
+        NotificationType notificationType = NotificationType.LIKE;
+        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, recipientUserId, itemType.name()
+                .toLowerCase(), itemId);
         String actorSetKey = batchKey + ACTOR_SET_KEY_SUFFIX;
-        
+
         // 중복 체크: 같은 사용자가 같은 아이템에 이미 좋아요했는지 확인
-        Long addResult = redisTemplate.opsForSet().add(actorSetKey, actorUserId.toString());
+        Long addResult = redisTemplate.opsForSet()
+                .add(actorSetKey, actorUserId.toString());
         boolean isNewLike = addResult != null && addResult > 0;
-        
+
         if (isNewLike) {
             // 새로운 좋아요인 경우에만 처리
-            
             // 1. DB에 알림 저장
-            Map<String, String> dataMap = createNotificationData(notificationType, itemType, itemId, actorUserName);
-            Notification notification = new Notification(recipientUserId, notificationType, dataMap, null);
+            NotificationDto.SendRequest request = NotificationDto.SendRequest.builder()
+                    .userId(recipientUserId)
+                    .title(getBasicLikeTitle(itemType))
+                    .body(getBasicLikeBody(itemType, actorUserName))
+                    .itemType(itemType)
+                    .itemId(itemId)
+                    .notificationType(notificationType)
+                    .build();
+            Notification notification = new Notification(recipientUserId, request, null);
             notificationRepository.save(notification);
-            
+
             // 2. 배치 처리를 위한 Redis 큐에 추가
-            BatchLikeData likeData = new BatchLikeData(actorUserId, actorUserName, notification.getId());
-            
+            BatchLikeData likeData =
+                    new BatchLikeData(actorUserId, actorUserName, notification.getId());
+
             try {
                 String likeDataJson = objectMapper.writeValueAsString(likeData);
-                redisTemplate.opsForList().rightPush(batchKey, likeDataJson);
-                
+                redisTemplate.opsForList()
+                        .rightPush(batchKey, likeDataJson);
+
                 // 만료 시간 설정 (15분)
                 redisTemplate.expire(batchKey, Duration.ofMinutes(15));
                 redisTemplate.expire(actorSetKey, Duration.ofMinutes(15));
-                
-                log.debug("Added like to batch queue: recipient={}, actor={}, item={}:{}", 
-                         recipientUserId, actorUserId, itemType, itemId);
+
+                log.debug("Added like to batch queue: recipient={}, actor={}, item={}:{}",
+                        recipientUserId, actorUserId, itemType, itemId);
             } catch (JsonProcessingException e) {
                 log.error("Failed to serialize like data for batch processing", e);
                 // JSON 직렬화 실패 시 알림 삭제
                 notificationRepository.deleteById(notification.getId());
             }
-        } else {
-            log.debug("Duplicate like ignored: recipient={}, actor={}, item={}:{}", 
-                     recipientUserId, actorUserId, itemType, itemId);
+        }
+        else {
+            log.debug("Duplicate like ignored: recipient={}, actor={}, item={}:{}", recipientUserId,
+                    actorUserId, itemType, itemId);
         }
     }
 
@@ -164,9 +179,11 @@ public class NotificationBatchService {
     @Async("notificationTaskExecutor")
     @Transactional
     public void removePostLikeFromQueue(Long postId, Long actorUserId) {
-        log.debug("Removing post like from queue asynchronously: postId={}, actorUserId={}", postId, actorUserId);
-        
-        Posting post = postRepository.findById(postId).orElse(null);
+        log.debug("Removing post like from queue asynchronously: postId={}, actorUserId={}", postId,
+                actorUserId);
+
+        Posting post = postRepository.findById(postId)
+                .orElse(null);
         if (post == null) {
             return;
         }
@@ -180,9 +197,11 @@ public class NotificationBatchService {
     @Async("notificationTaskExecutor")
     @Transactional
     public void removeCommentLikeFromQueue(Long commentId, Long actorUserId) {
-        log.debug("Removing comment like from queue asynchronously: commentId={}, actorUserId={}", commentId, actorUserId);
-        
-        Comment comment = commentRepository.findById(commentId).orElse(null);
+        log.debug("Removing comment like from queue asynchronously: commentId={}, actorUserId={}",
+                commentId, actorUserId);
+
+        Comment comment = commentRepository.findById(commentId)
+                .orElse(null);
         if (comment == null) {
             return;
         }
@@ -193,35 +212,41 @@ public class NotificationBatchService {
     /**
      * 좋아요 취소 시 배치 큐에서 제거하는 공통 메서드
      */
-    private void removeLikeFromQueue(Long recipientUserId, Long actorUserId, 
-                                   ItemType itemType, Long itemId) {
-        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, 
-                                       recipientUserId, 
-                                       itemType.name().toLowerCase(), 
-                                       itemId);
+    private void removeLikeFromQueue(Long recipientUserId, Long actorUserId, ItemType itemType,
+            Long itemId) {
+        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, recipientUserId, itemType.name()
+                .toLowerCase(), itemId);
         String actorSetKey = batchKey + ACTOR_SET_KEY_SUFFIX;
-        
+
         // 중복 체크 Set에서 제거
-        redisTemplate.opsForSet().remove(actorSetKey, actorUserId.toString());
-        
+        redisTemplate.opsForSet()
+                .remove(actorSetKey, actorUserId.toString());
+
         // 리스트에서 해당 사용자의 좋아요 데이터 찾아서 제거
-        List<Object> likeDataList = redisTemplate.opsForList().range(batchKey, 0, -1);
+        List<Object> likeDataList = redisTemplate.opsForList()
+                .range(batchKey, 0, -1);
         if (likeDataList != null) {
             for (int i = 0; i < likeDataList.size(); i++) {
                 try {
-                    BatchLikeData likeData = objectMapper.readValue(likeDataList.get(i).toString(), BatchLikeData.class);
-                    if (likeData.getActorUserId().equals(actorUserId)) {
+                    BatchLikeData likeData = objectMapper.readValue(likeDataList.get(i)
+                            .toString(), BatchLikeData.class);
+                    if (likeData.getActorUserId()
+                            .equals(actorUserId)) {
                         // 해당 항목을 찾았으면 제거
-                        redisTemplate.opsForList().set(batchKey, i, "REMOVED");
-                        redisTemplate.opsForList().remove(batchKey, 1, "REMOVED");
-                        
+                        redisTemplate.opsForList()
+                                .set(batchKey, i, "REMOVED");
+                        redisTemplate.opsForList()
+                                .remove(batchKey, 1, "REMOVED");
+
                         // 알림 DB에서도 제거
                         if (likeData.getNotificationId() != null) {
-                            notificationRepository.deleteById(Long.parseLong(likeData.getNotificationId()));
+                            notificationRepository.deleteById(
+                                    Long.parseLong(likeData.getNotificationId()));
                         }
-                        
-                        log.debug("Removed like from batch queue: recipient={}, actor={}, item={}:{}", 
-                                 recipientUserId, actorUserId, itemType, itemId);
+
+                        log.debug(
+                                "Removed like from batch queue: recipient={}, actor={}, item={}:{}",
+                                recipientUserId, actorUserId, itemType, itemId);
                         break;
                     }
                 } catch (JsonProcessingException e) {
@@ -237,16 +262,16 @@ public class NotificationBatchService {
     @Transactional
     public void processBatchLikeNotifications() {
         Set<String> likeKeys = redisTemplate.keys("batch_likes:user:*");
-        
-        if (likeKeys == null || likeKeys.isEmpty()) {
+
+        if (likeKeys.isEmpty()) {
             log.debug("No batch like notifications to process");
             return;
         }
-        
+
         log.info("Processing {} batch like notification groups", likeKeys.size());
-        
+
         Map<Long, List<String>> userLikeKeys = new HashMap<>();
-        
+
         // 사용자별로 좋아요 키 그룹화
         for (String key : likeKeys) {
             try {
@@ -254,23 +279,24 @@ public class NotificationBatchService {
                 String[] parts = key.split(":");
                 if (parts.length >= 3) {
                     Long userId = Long.parseLong(parts[2]);
-                    userLikeKeys.computeIfAbsent(userId, k -> new ArrayList<>()).add(key);
+                    userLikeKeys.computeIfAbsent(userId, k -> new ArrayList<>())
+                            .add(key);
                 }
             } catch (NumberFormatException e) {
                 log.warn("Invalid user ID in batch like key: {}", key);
             }
         }
-        
+
         // 각 사용자별로 좋아요 알림 처리 (비동기)
         int processedUsers = 0;
         for (Map.Entry<Long, List<String>> entry : userLikeKeys.entrySet()) {
             Long userId = entry.getKey();
             List<String> keys = entry.getValue();
-            
+
             processBatchLikeNotificationsForUserAsync(userId, keys);
             processedUsers++;
         }
-        
+
         log.info("Started processing batch like notifications for {} users", processedUsers);
     }
 
@@ -279,18 +305,22 @@ public class NotificationBatchService {
      */
     @Async("notificationTaskExecutor")
     public void processBatchLikeNotificationsForUserAsync(Long userId, List<String> likeKeys) {
-        User user = userRepository.findById(userId).orElse(null);
-        if (user == null || user.getFcmTokenList().isEmpty()) {
+        User user = userRepository.findById(userId)
+                .orElse(null);
+        if (user == null || user.getFcmTokenList()
+                .isEmpty()) {
             // 사용자가 없거나 FCM 토큰이 없으면 해당 키들 정리
             cleanupKeys(likeKeys);
-            log.warn("User {} not found or has no FCM tokens, cleaned up {} keys", userId, likeKeys.size());
+            log.warn("User {} not found or has no FCM tokens, cleaned up {} keys", userId,
+                    likeKeys.size());
             return;
         }
 
         int processedItems = 0;
         for (String likeKey : likeKeys) {
-            List<Object> likeDataList = redisTemplate.opsForList().range(likeKey, 0, -1);
-            
+            List<Object> likeDataList = redisTemplate.opsForList()
+                    .range(likeKey, 0, -1);
+
             if (likeDataList == null || likeDataList.isEmpty()) {
                 continue;
             }
@@ -298,7 +328,8 @@ public class NotificationBatchService {
             List<BatchLikeData> likes = new ArrayList<>();
             for (Object obj : likeDataList) {
                 try {
-                    BatchLikeData likeData = objectMapper.readValue(obj.toString(), BatchLikeData.class);
+                    BatchLikeData likeData =
+                            objectMapper.readValue(obj.toString(), BatchLikeData.class);
                     likes.add(likeData);
                 } catch (JsonProcessingException e) {
                     log.error("Failed to parse batch like data: {}", obj.toString(), e);
@@ -314,7 +345,7 @@ public class NotificationBatchService {
             redisTemplate.delete(likeKey);
             redisTemplate.delete(likeKey + ACTOR_SET_KEY_SUFFIX);
         }
-        
+
         log.debug("Processed {} like notification groups for user {}", processedItems, userId);
     }
 
@@ -322,7 +353,8 @@ public class NotificationBatchService {
      * 묶인 좋아요 알림 전송 (비동기)
      */
     @Async("notificationTaskExecutor")
-    public void sendBatchLikeNotificationAsync(User user, String likeKey, List<BatchLikeData> likes) {
+    public void sendBatchLikeNotificationAsync(User user, String likeKey,
+            List<BatchLikeData> likes) {
         // 키에서 아이템 정보 추출: batch_likes:user:123:item:post:456
         String[] keyParts = likeKey.split(":");
         if (keyParts.length < 6) {
@@ -330,39 +362,39 @@ public class NotificationBatchService {
             return;
         }
 
-        String itemType = keyParts[4]; // "post" or "comment"
+        String itemTypeStr = keyParts[4]; // "post" or "comment"
+        ItemType itemType = ItemType.fromString(itemTypeStr);
         String itemId = keyParts[5];   // "456"
 
         // 최근 좋아요한 사람들 이름 (최대 3명, 시간순 정렬)
         List<String> actorNames = likes.stream()
-                .sorted((a, b) -> b.getTimestamp().compareTo(a.getTimestamp()))
+                .sorted((a, b) -> b.getTimestamp()
+                        .compareTo(a.getTimestamp()))
                 .limit(3)
                 .map(BatchLikeData::getActorUserName)
                 .collect(Collectors.toList());
 
-        String title = generateBatchLikeTitle(itemType, likes.size());
-        String body = generateBatchLikeBody(itemType, actorNames, likes.size());
+        String title = generateBatchLikeTitle(itemTypeStr, likes.size());
+        String body = generateBatchLikeBody(itemTypeStr, actorNames, likes.size());
 
         Map<String, String> data = new HashMap<>();
-        data.put("type", NotificationType.LIKE.name().toLowerCase());
-        data.put("title", title);
-        data.put("body", body);
-        data.put("itemType", itemType);
-        data.put("itemId", itemId);
-        data.put("likeCount", String.valueOf(likes.size()));
+        data.put("count", String.valueOf(likes.size()));
 
         // FCM 푸시 알림 전송
         NotificationDto.SendRequest request = NotificationDto.SendRequest.builder()
                 .userId(user.getId())
                 .title(title)
                 .body(body)
+                .itemId(Long.parseLong(itemId))
+                .itemType(itemType)
+                .notificationType(NotificationType.LIKE)
                 .data(data)
                 .build();
 
         try {
             pushNotificationService.sendNotificationTo(user.getFcmTokenList(), request);
-            log.info("Sent batch like notification to user {}: {} likes on {} {}", 
-                    user.getId(), likes.size(), itemType, itemId);
+            log.info("Sent batch like notification to user {}: {} likes on {} {}", user.getId(),
+                    likes.size(), itemTypeStr, itemId);
         } catch (Exception e) {
             log.error("Failed to send batch like notification to user {}", user.getId(), e);
         }
@@ -378,29 +410,17 @@ public class NotificationBatchService {
 
     private String generateBatchLikeBody(String itemType, List<String> actorNames, int totalCount) {
         String itemTypeKorean = itemType.equals("post") ? "게시물" : "댓글";
-        
+
         if (totalCount == 1) {
-            return actorNames.get(0) + "님이 회원님의 " + itemTypeKorean + "에 좋아요를 눌렀습니다.";
-        } else if (totalCount == 2) {
-            return actorNames.get(0) + "님과 " + actorNames.get(1) + "님이 회원님의 " + itemTypeKorean + "에 좋아요를 눌렀습니다.";
-        } else if (totalCount == 3 && actorNames.size() == 3) {
-            return actorNames.get(0) + "님, " + actorNames.get(1) + "님, " + actorNames.get(2) + "님이 회원님의 " + itemTypeKorean + "에 좋아요를 눌렀습니다.";
-        } else {
+            return actorNames.getFirst() + "님이 회원님의 " + itemTypeKorean + "에 좋아요를 눌렀습니다.";
+        }
+        else {
             int othersCount = totalCount - 2;
-            return actorNames.get(0) + "님, " + actorNames.get(1) + "님 외 " + othersCount + "명이 회원님의 " + itemTypeKorean + "에 좋아요를 눌렀습니다.";
+            return actorNames.get(0) + "님, " + actorNames.get(1) + "님 외 " + othersCount +
+                    "명이 회원님의 " + itemTypeKorean + "에 좋아요를 눌렀습니다.";
         }
     }
 
-    private Map<String, String> createNotificationData(NotificationType type, ItemType itemType, 
-                                                      Long itemId, String actorName) {
-        Map<String, String> data = new HashMap<>();
-        data.put("type", type.name().toLowerCase());
-        data.put("title", getBasicLikeTitle(itemType));
-        data.put("body", getBasicLikeBody(itemType, actorName));
-        data.put("itemType", itemType.name().toLowerCase());
-        data.put("itemId", itemId.toString());
-        return data;
-    }
 
     private String getBasicLikeTitle(ItemType itemType) {
         return switch (itemType) {
@@ -429,17 +449,18 @@ public class NotificationBatchService {
      * 현재 대기 중인 좋아요 개수 조회 (포스트)
      */
     public int getPendingPostLikeCount(Long postId) {
-        Posting post = postRepository.findById(postId).orElse(null);
+        Posting post = postRepository.findById(postId)
+                .orElse(null);
         if (post == null) {
             return 0;
         }
 
-        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, 
-                                       post.getUserId(), 
-                                       ItemType.POST.name().toLowerCase(), 
-                                       postId);
-        
-        Long count = redisTemplate.opsForList().size(batchKey);
+        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, post.getUserId(),
+                ItemType.POST.name()
+                        .toLowerCase(), postId);
+
+        Long count = redisTemplate.opsForList()
+                .size(batchKey);
         return count != null ? count.intValue() : 0;
     }
 
@@ -447,17 +468,18 @@ public class NotificationBatchService {
      * 현재 대기 중인 좋아요 개수 조회 (댓글)
      */
     public int getPendingCommentLikeCount(Long commentId) {
-        Comment comment = commentRepository.findById(commentId).orElse(null);
+        Comment comment = commentRepository.findById(commentId)
+                .orElse(null);
         if (comment == null) {
             return 0;
         }
 
-        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, 
-                                       comment.getUserId(), 
-                                       ItemType.COMMENT.name().toLowerCase(), 
-                                       commentId);
-        
-        Long count = redisTemplate.opsForList().size(batchKey);
+        String batchKey = String.format(BATCH_LIKE_KEY_PATTERN, comment.getUserId(),
+                ItemType.COMMENT.name()
+                        .toLowerCase(), commentId);
+
+        Long count = redisTemplate.opsForList()
+                .size(batchKey);
         return count != null ? count.intValue() : 0;
     }
 }
